# universal-app

./: .dependency-cruiser.cjs  .env.example  .gitignore  .jscpd.json  .npmrc  AGENTS.md  ARCHITECTURE.md  README.md  SECURITY.md  biome.json  knip.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: package.json  tsconfig.json
apps/api/src/: app.e2e.test.ts  index.ts
apps/api/src/domain/: contracts.ts  health.ts  index.ts
apps/api/src/http/: index.ts  security.ts
apps/api/src/infra/: config.ts  index.ts  system-clock.ts
apps/shell/: index.html  package.json  tsconfig.json  vite.config.ts
apps/shell/src/: bindings.ts  index.css  ipc.ts  main.tsx
apps/shell/src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
apps/shell/src-tauri/.cargo/: audit.toml
apps/shell/src-tauri/capabilities/: default.json
apps/shell/src-tauri/src/: commands.rs  error.rs  lib.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: index.css  main.tsx
scripts/: check-bindings.mjs  check-bundle-secrets.mjs  check-bundle-secrets.test.mjs  check-bundle-size.mjs  check-file-size.mjs  check-secrets.mjs  check-security.mjs  check-security.test.mjs  check-template.mjs  check-template.test.mjs  clean.mjs  csp.mjs  dev.mjs  identity.mjs  ports.mjs  ports.test.mjs  rename.mjs  shell.mjs  stop.mjs
turbo/generators/: config.ts
turbo/generators/templates/feature/: index.ts.hbs  model.ts.hbs  ui.tsx.hbs
