[package]
name = "universal-app"
version = "0.0.0"
description = "Universal App"
authors = ["Ion Alpha"]
edition = "2021"
rust-version = "1.77.2"

# The lib is what mobile (iOS/Android) links against; keep all three crate types.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
