[package]
name = "universal-app"
version = "0.0.0"
description = "Universal App"
authors = ["Ion Alpha"]
license = "MIT"
edition = "2021"
# specta uses `fmt::from_fn`, stabilised in 1.92. Declared so a clone on an
# older toolchain fails with "requires rustc 1.92" instead of an unstable-feature
# error from deep inside a dependency. Verified: 1.91.1 fails, 1.97.1 builds.
rust-version = "1.92"
# The crate has two binaries - the app and the bindings generator - and Tauri's
# dev command shells out to a bare `cargo run`, which refuses to guess between
# them ("could not determine which binary to run"). Naming the default is what
# keeps `pnpm desktop` working.
default-run = "universal-app"

# The lib is what mobile (iOS/Android) links against; keep all three crate types.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Debug info, not code, is what makes a Tauri target directory enormous: the
# built `app_lib.dll` is ~144 kB while the accompanying `.lib` was 726 MB with
# the default profile. `line-tables-only` keeps backtraces pointing at real
# file:line locations (the reason to debug-build at all) and drops the full type
# information behind stepping and variable inspection.
[profile.dev]
debug = "line-tables-only"

# Dependencies are a different case: ~500 crates nobody steps into. No debug
# info at all for them. opt-level is deliberately left alone - raising it would
# trade a much longer first build for runtime this app does not spend in Rust.
[profile.dev.package."*"]
debug = false

# Shipped binaries. A Tauri app is webview-bound, not CPU-bound, so size is the
# thing worth optimising: it is what users download and what stores measure.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.19"
specta-typescript = "0.0.12"
specta = "2.0.0-rc"
tauri-specta = { version = "2.0.0-rc", features = ["typescript"] }
